lbdb (0.28.2) unstable; urgency=low

  * Another upgrade of m_bbdb by Aaron Kaplan <kaplan@cs.rochester.edu>.
  * Add homepage URL to the package description.
  * Quote $GNUCLIENT in m_bbdb to avoid error message when this variable
    is not defined (Closes: #231061).

 --

lbdb (0.28.1) unstable; urgency=low

  * Make m_osx_addressbook compile on MacOS 10.3 and XCode, too.  Thanks
    to Yuval Kogman <nothingmuch@woobling.org> and Brendan Cully
    <brendan@kublai.com> for the patch.
  * Remove "set -e" from lbdbq, which causes trouble if grep doesn't find
    a match in some of the modules (Closes: #222647).
  * m_passwd: Ignore system accounts (UIDs, which aren't in the range
    1000-29999 on a Debian system), if PASSWD_IGNORESYS=true is set
    (Closes: #188085).
  * Allow sorting the output by "comment" field (column 3) by setting
    SORT_OUTPUT=comment (Closes: #225104).
  * Add gnuclient support to m_bbdb module.  Thanks to Aaron Kaplan
    <kaplan@cs.rochester.edu> for providing this patch.

 -- Roland Rosenfeld <roland@debian.org>  Sun, 18 Jan 2004 14:59:38 +0100

lbdb (0.28) unstable; urgency=low

  * Fix bug in ABQuery module, which crashes when it finds results in
    non-latin character sets.  Now returns UTF8 results instead.  Thanks
    to Brendan Cully <brendan@kublai.com>.
  * Correct delimiter of vcard to END:VCARD in m_gnomecard and allow
    encodings etc. in the FN field, thanks to Rogerio Brito
    <rbrito@ime.usp.br> (Closes: #198633).
  * Search for .gnome/GnomeCard.gcd in $HOME instead of current directory.
  * m_abook: Search for $HOME/.abook/addressbook in addition to
    $HOME/.abook.addressbook to honor the fact that this file was moved in
    abook 0.5 (Closes: #205418).
  * Add a new version of mutt_ldap_query.pl by Marc de Courville:
    - activated pod2usage (now contained in all the decent distributions)
    - cleaned pod section to comply better with the pod formatting standard
    - change contact address
    - fixed typos